reduced min-height on slide 1 to avoid unecessary gaps between content

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -167,7 +167,7 @@ main {
 
 #slide-1 {
     margin: 0 auto;
-    min-height: 75vh;
+    min-height: 70vh;
     #title {
         h1 {
             margin: 0;
